# leonardo-module-gdpr

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
leonardo_module_gdpr/: __init__.py
leonardo_module_gdpr/templates/widget/gdpr/: default.html
leonardo_module_gdpr/widget/gdpr/: models.py
